[package]
name = "ssh-transfer"
version = "0.3.1"
authors = [
  "Valentin NOEL <valentin.noel@luminvent.com>",
  "Marc-Antoine Arnaud <marca-antoine.arnaud@luminvent.com>",
]
description = "License to transfer file via SFTP protocol"
repository = "https://github.com/luminvent/ssh_transfer"
license = "MIT"
edition = "2024"


[dependencies]
base64 = "0.13"
dirs = "3.0.1"
log = "0.4"
regex = "1"
ssh2 = "0.9"
whoami = "1.1"

[dev-dependencies]
env_logger = "0.8"
